edit oops text message

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,9 @@
         android:id="@+id/tvMessageOops"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_16"
+        android:layout_marginEnd="@dimen/margin_16"
+        android:gravity="center"
         android:text="@string/oops_something_went_wrong"
         android:textSize="@dimen/font_20"
         android:visibility="gone"
